--- a/netbox_automation_plugin/templates/netbox_automation_plugin/vlan_deployment_form.html
+++ b/netbox_automation_plugin/templates/netbox_automation_plugin/vlan_deployment_form.html
@@ -568,8 +568,8 @@
               <div class="spinner-border text-primary mb-3" role="status" style="width: 3rem; height: 3rem;">
                 <span class="visually-hidden">Loading...</span>
               </div>
-              <h4 style="color: var(--nbx-color-fg-default);">Deploying VLAN Configuration...</h4>
-              <p class="mb-0" style="color: var(--nbx-color-fg-default);">Applying configuration to devices. This may take a minute.</p>
+              <h4>Deploying VLAN Configuration...</h4>
+              <p class="mb-0">Applying configuration to devices. This may take a minute.</p>
             </div>
           </div>
 
